modified style a bit

--- a/style/style.css
+++ b/style/style.css
@@ -27,9 +27,13 @@ h1 {
 
 
 form {
-    margin: 0 20%;
+    margin: 5% 18%;
 }
 
 .attribution {
-    font-size: 0.5rem;
+    font-size: 0.6rem;
+}
+
+footer {
+    margin: 5% 12% 0 12%;
 }
