--- a/style/style.css
+++ b/style/style.css
@@ -11,7 +11,7 @@ html {
     } 
 
     #logo {
-        width: 9%;
+        width: 12%;
         padding-top: 1%;
         padding-left: 1%;
     }
@@ -22,18 +22,37 @@ h1 {
     font-family: 'Rock Salt', cursive;
     font-size: 3rem;
     text-align: center;
-    line-height: normal;
+    line-height: 150%;
+    margin-top: 3%;
 }
 
 
 form {
-    margin: 5% 18%;
+    text-align: center;
+}
+
+input {
+    font-family: 'Ubuntu', sans-serif;
+    width: 45%;
 }
 
 .attribution {
     font-size: 0.6rem;
 }
 
-footer {
-    margin: 5% 12% 0 12%;
+footer p {
+    text-align: center;
+    margin-top: 5%;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+a {
+    color: rgba(173, 14, 22, 0.842);
+    text-decoration: none;
+}
+
+h1 + p {
+    font-family: 'Ubuntu', sans-serif;
+    text-align: center;
+    margin-top: -5%;
 }
