--- a/style/style.css
+++ b/style/style.css
@@ -56,3 +56,16 @@ h1 + p {
     text-align: center;
     margin-top: -5%;
 }
+
+h2 {
+    font-size: 3.5rem;
+    text-align: center;
+    font-family: 'Rock Salt', cursive;
+    line-height: 150%;
+}
+
+h4 {
+    text-align: center;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 1.5rem;
+}
